# awesome-song2video

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLIP_EXTRACTION_STRATEGY.md  COMPARISON_71b30f8_vs_CURRENT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  LICENSE  MARENGO_CONFIG.md  QUERY_REWRITER_README.md  README.md  README_EN.md  SECURITY.md  VIDEO_DEDUPLICATION_README.md  docker-compose.yml  mypy.ini  package-lock.json  pyproject.toml  requirements-ci.txt  requirements-dev.txt  start.sh  stop.sh  test_results_summary.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  labeler.yml  security-audit.yml
.serena/: project.yml
.serena/memories/: code_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.specify/memory/: constitution.md
.specify/plans/: admin-backend-plan.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
alembic/versions/: 0001_init_song_mix.py  20241119_add_render_clip_stats.py
deploy/: docker-compose.yml
docs/: AGENTS.md  ARCHITECTURE.md  AUDIO_VIDEO_SYNC_FIX.md  DEMO.md  DOCKER_GUIDE.md  LOGGING.md  PROJECT_STRUCTURE.md  QUERY_REWRITE_MODES.md  SYSTEM_FLOW.md  WHISPER_THRESHOLD_TRADEOFF.md  lyrics_mix_runbook.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
requirements/: base.txt
scripts/: bootstrap.sh  test_structure_analyzer.py
src/: __init__.py
test_output/: twelvelabs_results.json
tests/: conftest.py
web/: package-lock.json  vite.config.ts
(+244 files in other folders)
